<resources>
    <string name="app_name">3DSlink Android</string>
    <string name="ip_Address">IP Address</string>
    <string name="filename">Filename</string>
    <string name="send">Send</string>
    <string name="select_file">Select file</string>
    <string name="file_path">File URI</string>
    <string name="file_size">File size</string>
    <string name="bytes">Bytes</string>
    <string name="about">About</string>

    <string name="about_text">3DSLink Android\n\nBased on https://github.com/devkitPro/3dslink\n\nConverted to Java/Android by rosaage\nSource: https://github.com/rosaage/3dslink-android</string>

</resources>